Mobile design of homepage done. Next: blog post rendering and About me page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>My Learning Journal</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Favicon -->
@@ -8,10 +13,8 @@
 
     <!-- Fonts -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    
+    <meta viewport="mobile" content="width=device-width, initial-scale=1">    
+
   </head>
   <body>
     <div class="container">
@@ -40,7 +43,7 @@
         <article class="blog-post">
           <img src="images/article-image-03.png" alt="" />
           <p class="subheading">July 23, 2022</p>
-          <h2 class="blog-heading">Blog one</h2>
+          <h3 class="blog-heading">Blog one</h3>
           <p>
             I'm excited to start a new learning journey as a Scrimba Bootcamp
             student! After several months of learning in the Frontend Developer
@@ -49,9 +52,9 @@
         </article>
 
         <article class="blog-post">
-          <img src="images/article-image-03.png" alt="" />
+          <img src="images/article-image-02.png" alt="" />
           <p class="subheading">July 23, 2022</p>
-          <h2 class="blog-heading">Blog one</h2>
+          <h3 class="blog-heading">Blog one</h3>
           <p>
             I'm excited to start a new learning journey as a Scrimba Bootcamp
             student! After several months of learning in the Frontend Developer
@@ -60,14 +63,17 @@
         </article>
 
         <article class="blog-post">
-          <img src="images/article-image-03.png" alt="" />
+          <img src="images/article-image-01.png" alt="" />
           <p class="subheading">July 23, 2022</p>
-          <h2 class="blog-heading">Blog one</h2>
+          <h3 class="blog-heading">Blog one</h3>
           <p>
             I'm excited to start a new learning journey as a Scrimba Bootcamp
             student! After several months of learning in the Frontend Developer
             Career Path.
           </p>
+        </article>
+        <article class="view-more">
+            <a href="#">View more</a>
         </article>
       </section>
 
