--- a/about-me.html
+++ b/about-me.html
@@ -25,7 +25,27 @@
     <div class="container">
       <header class="header"></header>
 
-      <main class="about-me-main"></main>
+      <main class="about-me-main">
+        <div class="about-me-intro">
+            <img src="images/image 18.png" alt="">
+            <div class="about-me-intro-text">
+                <h3>Hi there! My name is Roku and welcome to my learning journal.</h3>
+                <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
+            </div>
+        </div>
+
+        <div class="about-me-content">
+             <h4>How I stay committed to learning</h4>
+        <p>I like to think of myself as a lifelong learner. I used to spend hours and hours learning, then try to create simple projects using what I learned or work new techniques into existing projects.<br><br>
+        While that was fun, I felt like it would be helpful to share what I was learning and most things about my journey with the world.</p>
+
+        <h4>How I got started</h4>
+        <p>I started simple and gradually grew my learning journal site. I would take notes about what I was learning. After each learning session, I'd use my notes to not only reflect on what I learned but also write short summaries of what I learned using my own words.<br><br>
+        That helped me grok what I was learning, and I realized that posting my learning summaries was also helping others learn and stay motivated.</p>
+        </p>
+        </div>
+
+      </main>
       <section id="articles"></section>
     </div>
   </body>
